# minisapserver-debian

./: Makefile.am  Makefile.in  NEWS  aclocal.m4  broadcast.cpp  config.h.in  configure  configure.ac  lslp.h  message.cpp  parser.cpp  parser.h  program.cpp  program.h  sap.cfg  sapserver.1  sapserver.cpp  sapserver.h  slp.cpp
debian/: README.Debian  changelog  control  copyright  init.d  minisapserver.default  rules  watch
